docs: 调研报告新增激进选型修订（MyBatis-Flex/JDK25-only/Gradle9/PG-first 等）
https://claude.ai/code/session_016pLDjX6Wqj9PKZdLPyjoqt